--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple GraphQL Server",
   "main": "server.js",
   "scripts": {
-    "dev:server": "nodemon server.js" 
+    "dev:server": "nodemon server.js"
   },
   "keywords": [],
   "author": "Webcube Solutions",
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-graphql": "^0.12.0",
+    "graphql": "^16.10.0",
     "nodemon": "^3.1.9"
   }
 }
