--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Simple GraphQL Server",
   "main": "server.js",
   "scripts": {
-    "dev:server": "nodemon server.js"
+    "dev:server": "nodemon server.js",
+    "json:server": "json-server --watch data.json"
   },
   "keywords": [],
   "author": "Webcube Solutions",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.4",
     "express": "^5.1.0",
     "express-graphql": "^0.12.0",
     "graphql": "^16.10.0",
+    "json-server": "^1.0.0-beta.3",
     "nodemon": "^3.1.9"
   }
 }
